# MessengerQt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  update_translations.bat
ChatClient/: CMakeLists.txt  ConsoleUi.cpp  ConsoleUi.h  main.cpp
ChatClient/core/: ChatClientCore.cpp  ChatClientCore.h
ChatClient/gui/: AvatarRenderer.cpp  AvatarRenderer.h  ChatInputWidget.cpp  ChatInputWidget.h  ChatPanel.cpp  ChatPanel.h  EmojiData.cpp  EmojiData.h  EmojiPicker.cpp  EmojiPicker.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  MessageBubble.cpp  MessageBubble.h  MessageEditDialog.cpp  MessageEditDialog.h  MessagesView.cpp  MessagesView.h  ThemeManager.cpp  ThemeManager.h  TranslationManager.cpp  TranslationManager.h  UserItemDelegate.cpp  UserItemDelegate.h  UsersListModel.cpp  UsersListModel.h  UsersPanel.cpp  UsersPanel.h
ChatClient/resources/: client.qrc  client_dark.qss  client_light.qss
ChatClient/translations/: messenger_client_en.ts  messenger_client_ru.ts
ChatServer/: CMakeLists.txt  main.cpp
ChatServer/core/: AdminConsole.cpp  AdminConsole.h  AuthService.cpp  AuthService.h  ChatServer.cpp  ChatServer.h  ClientSession.cpp  ClientSession.h  Config.cpp  Config.h  Database.cpp  Database.h
ChatServer/gui/: BanDialog.cpp  BanDialog.h  ConnectionLogModel.cpp  ConnectionLogModel.h  ConnectionLogTab.cpp  ConnectionLogTab.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  MessagesModel.cpp  MessagesModel.h  MessagesTab.cpp  MessagesTab.h  SettingsDialog.cpp  SettingsDialog.h  ThemeManager.cpp  ThemeManager.h  TranslationManager.cpp  TranslationManager.h  TrayIcon.cpp  TrayIcon.h  UsersModel.cpp  UsersModel.h  UsersTab.cpp  UsersTab.h
ChatServer/resources/: server.qrc  theme_dark.qss  theme_light.qss
ChatServer/translations/: messenger_server_en.ts  messenger_server_ru.ts
Common/: CMakeLists.txt  FrameCodec.cpp  FrameCodec.h  Models.h  PasswordHasher.cpp  PasswordHasher.h  Protocol.cpp  Protocol.h  placeholder.cpp
cmake/: WinDeployQt.cmake
config/: server.ini.example
sql/: 001_init.sql
tests/: CMakeLists.txt  test_auth.cpp  test_clientserver.cpp  test_database.cpp  test_framecodec.cpp  test_password.cpp  test_protocol.cpp  test_smoke.cpp
